.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>EchoSign Triggers</relationshipLabel>
        <relationshipName>EchoSign_Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Process_Asynchronously__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Asynchronously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EchoSign Trigger</label>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>EchoSign Trigger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EchoSign Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>